<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/yyyy_MM"
        android:textColor="@color/text_color_c8c5c5"
        android:textSize="@dimen/text_size15"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal">

        <TextView
            style="@style/select_calendar_week_title"
            android:text="@string/sunday" />

        <TextView
            style="@style/select_calendar_week_title"
            android:text="@string/monday" />

        <TextView
            style="@style/select_calendar_week_title"
            android:text="@string/tuesday" />

        <TextView
            style="@style/select_calendar_week_title"
            android:text="@string/wednesday" />

        <TextView
            style="@style/select_calendar_week_title"
            android:text="@string/thursday" />

        <TextView
            style="@style/select_calendar_week_title"
            android:text="@string/friday" />

        <TextView
            style="@style/select_calendar_week_title"
            android:text="@string/saturday" />
    </LinearLayout>

</LinearLayout>