<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/shape_divider_horizontal_line_e4e5e4"
    android:orientation="vertical"
    android:showDividers="beginning|middle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/calendar_week_title"
            android:text="@string/sunday" />

        <TextView
            style="@style/calendar_week_title"
            android:text="@string/monday" />

        <TextView
            style="@style/calendar_week_title"
            android:text="@string/tuesday" />

        <TextView
            style="@style/calendar_week_title"
            android:text="@string/wednesday" />

        <TextView
            style="@style/calendar_week_title"
            android:text="@string/thursday" />

        <TextView
            style="@style/calendar_week_title"
            android:text="@string/friday" />

        <TextView
            style="@style/calendar_week_title"
            android:text="@string/saturday" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:overScrollMode="never" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"

        android:paddingStart="@dimen/start"
        android:paddingEnd="@dimen/end">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/MM_dd"
            android:textColor="@color/text_color_a19e9d"
            android:textSize="@dimen/text_size14" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/end"
            android:drawableStart="@drawable/shape_beyond_budget_hint"
            android:drawablePadding="5dp"
            android:gravity="center_vertical|end"
            android:text="@string/beyond_budget_hint"
            android:textColor="@color/text_color_a19e9d"
            android:textSize="@dimen/text_size12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/shape_not_beyond_budget_hint"
            android:drawablePadding="5dp"
            android:gravity="center_vertical|end"
            android:text="@string/not_beyond_budget_hint"
            android:textColor="@color/text_color_a19e9d"
            android:textSize="@dimen/text_size12" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_record"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:overScrollMode="never" />

    <TextView
        android:id="@+id/tv_black"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg_color_f7"
        android:drawableTop="@drawable/shape_calendar_record_add_ic"
        android:drawablePadding="20dp"
        android:gravity="top|center_horizontal"
        android:paddingTop="30dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/black_record_hint"
        android:visibility="gone" />

</LinearLayout>