<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color_467fea">


    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="bottom"
        android:hint="@string/username_hint"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="9dp"
        android:textColor="@color/white"
        android:textColorHint="@color/transparent_white" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="bottom"
        android:hint="@string/password"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="9dp"
        android:textColor="@color/white"
        android:textColorHint="@color/transparent_white" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="144dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_login_btn_bg"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/Immediately_login" />

</LinearLayout>