<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_content"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:minHeight="175dp"
    android:paddingEnd="@dimen/end"
    android:paddingStart="@dimen/start">

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/have_no_money"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size29" />

    <ImageView
        android:contentDescription="@null"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:src="@mipmap/books_bi_icon"
        android:layout_toEndOf="@+id/tv_balance"
        android:layout_alignTop="@+id/tv_balance" />

    <TextView
        android:id="@+id/tv_balance_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_balance"
        android:layout_centerHorizontal="true"
        android:alpha="0.8"
        android:text="@string/account_balance"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size12" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_year"
        android:text="@string/year"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_expenditure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/have_no_money"
        android:textSize="@dimen/text_size18"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_expenditure_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_expenditure"
        android:layout_below="@+id/tv_expenditure"
        android:layout_centerHorizontal="true"
        android:alpha="0.8"
        android:text="@string/expenditure"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size12" />

    <TextView
        android:id="@+id/tv_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="120dp"
        android:text="@string/have_no_money"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size18"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/tv_income_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/tv_income"
        android:layout_below="@+id/tv_income"
        android:alpha="0.8"
        android:text="@string/bank_income"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size12" />


</RelativeLayout>