<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="300dp"
    android:orientation="vertical"
    android:background="@color/white"
    android:overScrollMode="never"
    android:scrollbars="none">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="@dimen/start"
        android:paddingEnd="@dimen/end">

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/edit"
            android:textColor="@color/AppThemeColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_member"
            android:textColor="@color/text_color_655f5f" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:text="@string/ok"
            android:textColor="@color/AppThemeColor" />
    </FrameLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:divider="@drawable/shape_divider_horizontal_line_e4e5e4"
            android:showDividers="beginning|middle"
            android:maxHeight="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>